# mlit-1km-fromto

./: ARCHITECTURE.md  MAPLIBRE_MIGRATION.md  README.md  SUMMARY_JA.md  pyproject.toml  requirements.txt  run_app.sh
app/assets/: hokkaido_regionname_master.csv
app/common/: const.py  folium_map_builder.py  maplibre_map_builder.py  region_builder.py  routing.py  step_by_step.py  utils.py
app/pages/: comparison.py  learn.py  maplibre_test.py  overview.py
assets/: README.md  hokkaido_regionname_master.csv  prefcode_citycode_master_utf8_2020.csv  regioncode_master_utf8_2020.csv
docs/Investigation_maplibre/: ARCHITECTURE.md  MAPLIBRE_MIGRATION.md  SUMMARY_JA.md
tests/: README.md  conftest.py
tests/unit/: test_region_builder.py  test_utils.py
